added border to homepage bg

--- a/wp-content/themes/stageworks2/sass/style.scss
+++ b/wp-content/themes/stageworks2/sass/style.scss
@@ -113,6 +113,8 @@ body {
 }
 body.home #page {
   background: black url(images/stages/brightfire1.jpg) no-repeat;
+  border-left: 4px solid black;
+  border-right: 4px solid black;
 }
 
 #access div {
